--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,4 +2,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/blog_pessoal?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
+
